@@ -8,6 +8,7 @@ Revision history for Perl extension Util::H2O.
 		- the "-recurse" option now passes down the value of the
 		  "-lock" option to nested hashes in addition to the new "-ro"
 	- documented AUTOLOAD and added tests
+	- module now issues a warning that hashes can't be locked on old Perls
 
 0.10	Mon, Jun  1 2020	commit 6db2a1d4cdf1a82ad2efe00f402a9596fa14cbfa
 	- added "-classify" option
